--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "@tailwindcss/postcss": "^4.0.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "eslint": "8.50.0",
@@ -17,9 +18,15 @@
     "next": "13.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "react-sparklines": "^1.7.0",
+    "tailwind": "^4.0.0"
   },
   "devDependencies": {
+    "@types/react-sparklines": "^1.7.5",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^4.0.0",
     "typescript": "^5.7.3"
   }
 }
