--- a/package.json
+++ b/package.json
@@ -20,13 +20,19 @@
     "react-dom": "18.2.0",
     "react-redux": "^9.2.0",
     "react-sparklines": "^1.7.0",
-    "tailwind": "^4.0.0"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@types/react-sparklines": "^1.7.5",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
-    "tailwindcss": "^4.0.0",
-    "typescript": "^5.7.3"
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "tailwindcss": "^3.4.1",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.6",
+    "@eslint/eslintrc": "^3"
   }
 }
