--- a/package.json
+++ b/package.json
@@ -20,19 +20,20 @@
     "react-dom": "18.2.0",
     "react-redux": "^9.2.0",
     "react-sparklines": "^1.7.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
-    "@types/react-sparklines": "^1.7.5",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.5.1",
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "tailwindcss": "^3.4.1",
+    "@types/react-sparklines": "^1.7.5",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
