Update modules and update config files to properly run dev with next.config.ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,13 +20,16 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "target": "ES2017"
   },
   "include": [
     "next-env.d.ts",
     ".next/types/**/*.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    "next.config.ts",
+    "next.config.mjs"
   ],
   "exclude": [
     "node_modules"
