--- a/package.json
+++ b/package.json
@@ -12,22 +12,21 @@
     "@reduxjs/toolkit": "^2.5.0",
     "@tailwindcss/postcss": "^4.0.0",
     "axios": "^1.7.9",
-    "bootstrap": "^5.3.3",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.3",
-    "next": "13.5.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "react-redux": "^9.2.0",
     "react-sparklines": "^1.7.0",
     "tailwindcss": "^3.4.17",
-    "uuid": "^11.0.5"
+    "uuid": "^11.0.5",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "next": "15.1.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/node": "^20.17.16",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
     "@types/react-sparklines": "^1.7.5",
     "autoprefixer": "^10.4.20",
     "eslint": "^9",
